--- a/container/frontend/package.json
+++ b/container/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite build --watch",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
