--- a/container/frontend/package.json
+++ b/container/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "react": "^18.2",
     "react-dom": "^18.2"
   },
@@ -17,6 +18,7 @@
     "@types/react": "^18.0",
     "@types/react-dom": "^18.0",
     "@vitejs/plugin-react": "^4.0",
+    "sass": "^1.63.6",
     "typescript": "^5.1",
     "vite": "^4.3"
   }
